--- a/judges/tinyjudge/workflow.yml
+++ b/judges/tinyjudge/workflow.yml
@@ -1,7 +1,7 @@
 # TinyJudge workflow configuration
 # Minimal LLM-based judge that checks first-sentence relevance
 
-judge_class: "judges.tinyjudge.tiny_judge.TinyJudge"
+judge_class: "judges.tinyjudge.tiny_judge:TinyJudge"
 
 # Lifecycle flags
 create_nuggets: false
