--- a/judges/naive/workflow.yml
+++ b/judges/naive/workflow.yml
@@ -1,5 +1,5 @@
 # Naive judge: no nuggets
-judge_class: "judges.naive.naive_baseline.NaiveJudge"
+judge_class: "judges.naive.naive_baseline:NaiveJudge"
 
 create_nuggets: false
 judge: true
